test/Programs/InvalidTests/nonContractiveTypeDef/nonContractiveTypeDef.fst
type T = T

main : Char
main = 'a'
